--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <h1>PGX is moving to Discord</h1>
   <h2>Join at <a href="https://discord.gg/shellypalmer">https://discord.gg/shellypalmer</a></h2>
-<p>PGX.tech will officially move from Mighty Networks to Discord at 11:59pm March 7, 2022. If you have data on PGX you wish to download or save, click here to visit pgx.tech.
-</p>
+<p>PGX.tech will officially move from Mighty Networks to Discord at 11:59pm March 7, 2022.</p> 
+<p>If you have data on PGX you wish to download or save, click here to visit pgx.tech.</p>
 
 </body>
 </html>
