--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1 style="font-family:Sans-Serif;">PGX is moving to Discord</h1>
   <h2 style="font-family:Sans-Serif;">Join at <a href="https://discord.gg/shellypalmer">https://discord.gg/shellypalmer</a></h2>
 <p style="font-family:Sans-Serif;">PGX.tech will officially move from Mighty Networks to Discord at 11:59pm March 7, 2022.</p> 
-<p style="font-family:Sans-Serif;">If you have data on PGX you wish to download or save, click <a href="pgx-tech.mn.co">here<a/> to visit pgx.tech.</p>
+<p style="font-family:Sans-Serif;">If you have data on PGX you wish to download or save, click <a href="https://pgx-tech.mn.co">here<a/> to visit pgx.tech.</p>
 
 </body>
 </html>
