--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="font-family:Sans-Serif;">
 
-<h1 style="font-family:Sans-Serif;">PGX is moving to Discord</h1>
-  <h2 style="font-family:Sans-Serif;">Join at <a href="https://discord.gg/shellypalmer">https://discord.gg/shellypalmer</a></h2>
-<p style="font-family:Sans-Serif;">PGX.tech will officially move from Mighty Networks to Discord at 11:59pm March 7, 2022.</p> 
-<p style="font-family:Sans-Serif;">If you have data on PGX you wish to download or save, click <a href="https://pgx-tech.mn.co">here<a/> to visit pgx.tech.</p>
+<h1>PGX is moving to Discord</h1>
+  <h2>Join at <a href="https://discord.gg/shellypalmer">https://discord.gg/shellypalmer</a></h2>
+<p>PGX.tech will officially move from Mighty Networks to Discord at 11:59pm March 7, 2022.</p> 
+<p>If you have data on PGX you wish to download or save, click <a href="https://pgx-tech.mn.co">here<a/>.</p>
 
 </body>
 </html>
