--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="font-family:Sans-Serif; background-color:#0088DD;">
-<img src="PGXlogo.png" alt="PGX" width="75%">
+<body style="font-family:Sans-Serif;">
 <h1>PGX is moving to Discord</h1>
   <h2>Join at <a href="https://discord.gg/shellypalmer">https://discord.gg/shellypalmer</a></h2>
 <p>PGX.tech will officially move from Mighty Networks to Discord at 11:59pm March 7, 2022.</p> 
