--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <h1>PGX is moving to Discord</h1>
   <h2>Join at <a href="https://discord.gg/shellypalmer">https://discord.gg/shellypalmer</a></h2>
 <p>PGX.tech will officially move from Mighty Networks to Discord at 11:59pm March 7, 2022.</p> 
-<p>If you have data on PGX you wish to download or save, please <a href="https://www.shellypalmer.com/contact-us/">contact us</a> for more information.</p>
+<p>If you have data on PGX you wish to download or save, please <a href="https://pgx-tech.mn.co/">click here</a>.</p>
+<p>For mor information <a href="https://www.shellypalmer.com/contact-us/">contact us</a> for more information.</p>
 
 </body>
 </html>
